fix strange red glowing on safari

--- a/src/pages/landing/components/RoadMap/components/RoadMapDesktop/styles.module.scss
+++ b/src/pages/landing/components/RoadMap/components/RoadMapDesktop/styles.module.scss
@@ -23,7 +23,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-image: linear-gradient(to right, rgba(255,0,0,0) 90%, #f9fafe 100%);
+  background-image: linear-gradient(to right, rgba(255,255,255,0) 90%, #f9fafe 100%);
   z-index: 5;
 }
 
